Daniel addd photos to workshop page image slider and fixes alignment

--- a/frontend/css/jewelry-workshop-800plus.css
+++ b/frontend/css/jewelry-workshop-800plus.css
@@ -67,10 +67,10 @@ body {
 /* .li.sticky:hover {
   background-color: rgba(212, 199, 171, 0.925);
 } */
- 
+
 .contact-container {
   display: grid;
-  grid-template-rows: 1fr;  
+  grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   margin-top: 1rem;
   width: 100%;
@@ -87,7 +87,6 @@ body {
 .contact-block-last {
   border: none;
   padding: 0 8px 0px 8px;
-
 }
 
 .whatsapp-atr {
@@ -227,7 +226,9 @@ header {
   display: flex;
   flex-flow: column;
   width: 100%;
-  height: 86vh;
+  height: 80vh;
+  position: relative;
+  overflow: hidden;
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 4px solid rgb(20, 177, 75); */
@@ -236,8 +237,11 @@ header {
 .slide-images-container {
   display: flex;
   overflow: hidden;
-  height: 86vh;
-  max-height: 86vh;
+  position: absolute;
+  top: 3.8rem;
+
+  height: 80vh;
+  max-height: 80vh;
 
   /* ~~~~ FOR DEBUGGING~~~~*/
   /* border: 4px solid rgb(177, 20, 143); */
@@ -246,7 +250,7 @@ header {
 .slide-image {
   object-fit: contain;
   position: relative;
-  bottom: 9rem;
+  bottom: 18rem;
 }
 
 .slide-image-img {
@@ -258,11 +262,37 @@ header {
   /* border: 4px solid rgb(75, 20, 177); */
 }
 
+.slide-image--one {
+  object-fit: contain;
+  position: relative;
+  top: 6rem;
+}
+
+.slide-image--two,
+.slide-image--four,
+.slide-image--five,
+.slide-image--six {
+  object-fit: contain;
+  position: relative;
+  height: 100%;
+  top: 19rem;
+  background-image: linear-gradient(white, rgb(232, 228, 222), white);
+}
+
+.slide-image--eight {
+  object-fit: contain;
+  position: relative;
+  height: 140%;
+  top: 19rem;
+  background-image: linear-gradient(white, rgb(230, 230, 230), white);
+}
+
 main {
   display: flex;
   flex-flow: column;
   align-items: center;
   overflow: hidden;
+  position: relative;
 
   max-height: 100rem;
   width: 100%;
@@ -287,12 +317,12 @@ h1 {
   /* border: 2px solid rgb(40, 228, 37); */
 }
 
-.first-row-container,
-.second-row-container {
+.workshop-description-container {
   display: flex;
   flex-flow: row;
   box-sizing: border-box;
   margin-bottom: 4rem;
+  margin-left: 5rem;
 
   width: 100%;
   max-height: 100%;
@@ -301,21 +331,6 @@ h1 {
   /* border: 2px solid rgb(37, 50, 228); */
 }
 
-/* .workshop-description {
-  background-color: rgba(245, 245, 220);
-  box-shadow: 12px 2px 30px 2px rgb(168, 163, 154);
-  font-size: 1.2vw;
-  padding: 2rem;
-  
-
-  width: 50%;
-  height: 100%;
-
-  ~~~~ FOR DEBUGGING~~~~
-  border: 2px solid rgb(40, 228, 37);
-} */
-
-.workshop-description-second,
 .workshop-description {
   background-color: rgba(245, 245, 220, 0.9);
   box-shadow: 12px 2px 30px 2px rgb(168, 163, 154);
@@ -334,8 +349,10 @@ h1 {
 }
 
 .workshop-description--img {
-  width: 50%;
-  height: 100%;
+  width: 30%;
+  height: 40%;
+  margin-left: 6rem;
+  margin-top: 4rem;
 
   box-shadow: 1px 3px 30px 2px rgba(133, 143, 143, 0.646);
 
@@ -400,21 +417,27 @@ h1 {
 }
 
 .go-to-top {
-  width: 10%;
+  width: 3rem;
+  height: 3rem;
   margin: 4rem;
-  border: 1px solid;
-  background-color: rgba(255, 255, 255, 0.712);
+  font-size: 2rem;
+  border: none;
+  border-radius: 50%;
+  background-image: linear-gradient(
+    rgba(255, 166, 0, 0.653),
+    rgba(255, 0, 0, 0.553)
+  );
   padding: 5px;
+  color: rgb(62, 62, 62);
 
   /* ~~~~ FOR DEBUGGING~~~~ */
   /* border: 2px solid rgb(37, 155, 228); */
 }
 
 .go-to-top:hover {
-  border: rgb(113, 101, 33), solid;
-  color: rgb(113, 101, 33);
   cursor: pointer;
-  background-color: rgba(224, 241, 152, 0.377);
+  padding: 5px;
+  background-image: linear-gradient(rgba(255, 166, 0), rgba(255, 0, 0));
 }
 
 .footer {
